--- a/msx0reup_settings.ini
+++ b/msx0reup_settings.ini
@@ -2,7 +2,7 @@
 temp_folder = ./msx0reup_temp
 default_url = https://enu7.sakura.ne.jp/msx/
 default_msx0_ip = 192.168.0.11
-
+color_theme = Red
 [Advanced]
 basic_program_path = ./default_basic_program.txt
 
