--- a/msx0reup_settings.ini
+++ b/msx0reup_settings.ini
@@ -1,8 +1,10 @@
 [General]
 temp_folder = ./msx0reup_temp
 default_url = https://enu7.sakura.ne.jp/msx/
-default_msx0_ip = 192.168.0.11
-color_theme = Red
+default_msx0_ip = 192.168.0.4
+color_theme = Blue
+
 [Advanced]
-basic_program_path = ./default_basic_program.txt
+upload_basic_program_path =.\upload_basic_program.txt
+download_basic_program_path = .\download_basic_program.txt
 
